@@ -166,12 +166,17 @@ void filter_read()
     } from;
     size_t from_len = sizeof(from);
     int len;
-    char packet[256];
+    char packet[4096];
 
     /* N.B. The packet buffer only needs to be big enough for the longest
      * header of any protocol we handle. Surplus data in a packet will
      * be silently discarded by the kernel. Letting it be copied to
      * user space is a waste of time and cache resources...
+     *
+     * FIXME: currently we need the length of the full packet to count
+     * bytes in and out. The only sane way to get that is to read the
+     * full packet. The interfaces actually track the byte counts
+     * themselves but currently this is only exposed by /proc/net/dev.
      */
 
     if ((len = recvfrom(snoopfd,packet,sizeof(packet),0,(struct sockaddr *)&from,&from_len)) > 0) {
